Fix workout list scrollbar appearing in mozilla firefox

--- a/TRACKit.css
+++ b/TRACKit.css
@@ -58,6 +58,7 @@ a:visited {
     height: 77vh;
     overflow-y: scroll;
     overflow-x: hidden;
+    scrollbar-width: none;
 }
 
 .workouts::-webkit-scrollbar {
